Nodes and Edges on display for the complete network generated on initial data.

--- a/src/style.less
+++ b/src/style.less
@@ -15,8 +15,8 @@
 	/* Definitions for the SVG (left) area of the graph */
 	svg.targetmineGraphSVG{
 		flex-grow: 1;
-		width: 100%;
-		height: inherit; /* auto; */
+		// width: 100%;
+		// height: inherit; /* auto; */
 	}
 
 	/* css for the right tools column elements */
