Grouping nodes automatically at loading. Modified loading of data. NO GROUPED EDGES.

--- a/src/style.less
+++ b/src/style.less
@@ -17,6 +17,8 @@
 		flex-grow: 1;
 		// width: 100%;
 		// height: inherit; /* auto; */
+		border-style: dashed;
+		border-color:cadetblue;
 	}
 
 	/* css for the right tools column elements */
