Adding interface elements for image exporting.

--- a/src/style.less
+++ b/src/style.less
@@ -15,8 +15,6 @@
 	/* Definitions for the SVG (left) area of the graph */
 	svg.targetmineGraphSVG{
 		flex-grow: 1;
-		// width: 100%;
-		// height: inherit; /* auto; */
 		border-style: dashed;
 		border-color:cadetblue;
 	}
@@ -76,5 +74,10 @@
 	
 	input[type=checkbox]{
 		height: inherit;
+	}
+
+	/* css for modal elements */
+	.im-modal{
+		display: none;
 	}
 }
