Added functionality for user-guided grouping of nodes.

--- a/src/style.less
+++ b/src/style.less
@@ -41,28 +41,35 @@
 		justify-content: space-evenly;
 	}
 
-	.row-cell{
+	div.row-cell{
 		width: 10%;
 		min-width: 10px;
 		max-width: 100px;
 		height: 20px;
+		background-color:lightpink;
 	}
+
+	.fa-disabled{
+		opacity: 0.6;
+		cursor: not-allowed;
+	}
+
 	.row-label{
 		justify-content: left;
 		width: 80%;
 	}
 	
-	.row-small-close{
-		color: #aaa;	
-		width: 10%;
-		height: 20px;
-	}
-	.row-small-close:hover,
-	.row-small-close:focus {
-		color: black;
-		text-decoration: none;
-		cursor: pointer;
-	}
+	// .row-small-close{
+	// 	color: #aaa;	
+	// 	width: 10%;
+	// 	height: 20px;
+	// }
+	// .row-small-close:hover,
+	// .row-small-close:focus {
+	// 	color: black;
+	// 	text-decoration: none;
+	// 	cursor: pointer;
+	// }
 
 	button.flex-button{
 		width: 50%;
